@@ -56,20 +56,18 @@ void FSize::scaleBy (int dx, int dy) noexcept
 {
   if ( dx < 0 )
   {
-    if ( std::size_t(-dx) < width )
-      width -= std::size_t(-dx);
-    else
-      width = std::size_t(-dx) - width;
+    width = ( std::size_t(-dx) < width )
+            ? width - std::size_t(-dx)
+            : std::size_t(-dx) - width;
   }
   else
     width += std::size_t(dx);
 
   if ( dy < 0 )
   {
-    if ( std::size_t(-dy) < height )
-      height -= std::size_t(-dy);
-    else
-      height = std::size_t(-dy) - height;
+    height = ( std::size_t(-dy) < height )
+             ? height - std::size_t(-dy)
+             : std::size_t(-dy) - height;
   }
   else
     height += std::size_t(dy);
